[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "bycycle.webui"
version = "1.0a1"
description = "byCycle Web UI"
authors = ["Wyatt Baldwin <wyatt@bycycle.org>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
runcommands = "1.0a43"
